Updated for ODTK 7.4.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # odtk install
-ODTK*Linux.zip
-ODTK*Linux/*
+ODTKEngineLinux*.zip
+ODTKEngineLinux*/*
 
 # odtk cross platform api or license
 odtk.py
