--- a/python_reqs/requirements.txt
+++ b/python_reqs/requirements.txt
@@ -1,9 +1,5 @@
-h5py >= 2.10.0
-more_itertools
-numpy >= 1.18.5
-packaging
-pandas <= 1.3.3
-pyparsing
-python-dateutil
-pytz
-six
+argparse
+datetime
+numpy
+pandas>=0.25
+h5py>=2.8
